# vcmc

./: Cargo.toml  PLANS.md  README.md
.github/workflows/: pages.yml
docs/steps/: step_1.md  step_10.md  step_11.md  step_12.md  step_13.md  step_14.md  step_15.md  step_16.md  step_17.md  step_18.md  step_19.md  step_2.md  step_20.md  step_21.md  step_22.md  step_23.md  step_24.md  step_25.md  step_26.md  step_28.md  step_29.md  step_3.md  step_30.md  step_31.md  step_32.md  step_33.md  step_34.md  step_35.md  step_36.md  step_4.md  step_5.md  step_6.md  step_7.md  step_8.md  step_9.md
site/: index.html
src/: app.rs  backend.rs  errors.rs  find.rs  fs.rs  jobs.rs  main.rs  menu.rs  model.rs  runtime.rs  smoke.rs  terminal.rs  theme.rs  ui.rs  viewer.rs
