[package]
name = "vcmc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
